tests/models/struct/named/i128/fail/default.rs
use dade::model;
#[model]
struct TestModel {
    #[field(default = 2.0)]
    value: i128,
}
fn main() {}
